Updated layout classes.

--- a/css-four-column-layout/styles.css
+++ b/css-four-column-layout/styles.css
@@ -13,6 +13,7 @@ h2 {
   font-size: 1.1rem;
   font-weight: 800;
   margin-top: 0.5rem;
+  margin-bottom: 0.6rem;
 }
 
 h3 {
@@ -26,13 +27,18 @@ p {
   font-weight: 500;
 }
 
-.feature-container {
+.container {
+  width: 850px;
+  margin: 0 auto;
+}
+
+.row {
   display: flex;
   justify-content: center;
 }
 
-.feature {
-  margin: 0 -2.5rem;
+.col-1-4 {
+  margin: 0 -2.25rem;
 }
 
 .image > img {
