--- a/javascript-modal/styles.css
+++ b/javascript-modal/styles.css
@@ -7,8 +7,6 @@ body {
   font-family: sans-serif;
 }
 
-/* Button Styles */
-
 button {
   font-size: 1.5rem;
   color: white;
@@ -33,29 +31,29 @@ button {
   cursor: pointer;
 }
 
-/* Modal Styles */
-
-.modal-container {
-  width: 50%;
-  margin: 0 auto;
+.modal-container-off {
+  display: none;
 }
 
-.row {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.col-full {
-  flex-basis: 100%;
+.modal-container-on {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 75%);
+  z-index: 1;
 }
 
 .modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
-  border: 1px solid black; /* Temp */
   border-radius: 4px;
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  background-color: white;
+  padding: 3rem 2rem;
 }
 
 h2 {
