--- a/javascript-typing-tutor/styles.css
+++ b/javascript-typing-tutor/styles.css
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  font-family: sans-serif;
+  font-family: monospace;
 }
 
 .container {
@@ -15,6 +15,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 }
 
 .col-full {
@@ -25,10 +26,68 @@ body {
   text-align: center;
 }
 
-h1 {
-  margin: 0 auto;
+.current-char {
+  border-bottom: 1px solid black;
+}
+
+.correct {
+  color: green;
+  border-bottom: none;
+}
+
+.incorrect {
+  color: red;
+  border-bottom: 1px solid red;
 }
 
 span {
   white-space: pre;
+}
+
+.modal-off {
+  display: none;
+}
+
+.modal-on {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0 0 0 / 75%);
+  z-index: 1;
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  border-radius: 4px;
+  background-color: white;
+  padding: 3rem 2rem;
+}
+
+h2 {
+  margin: 0;
+}
+
+h3 {
+  margin-top: 0;
+  margin-bottom: 3rem;
+}
+
+.reset {
+  font-size: 1.5rem;
+  color: white;
+  background-color: blue;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px gray;
+  padding: 0.5rem 1.5rem;
+}
+
+.reset:hover {
+  cursor: pointer;
 }
