--- a/javascript-typing-tutor/styles.css
+++ b/javascript-typing-tutor/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container {
-  margin: 0 auto;
+  margin: 0 4rem;
 }
 
 .row {
@@ -22,12 +22,12 @@ body {
   flex-basis: 100%;
 }
 
-.phrase {
+.phrase-container {
   text-align: center;
 }
 
 .current-char {
-  border-bottom: 1px solid black;
+  border-bottom: 3px solid black;
 }
 
 .correct {
@@ -37,7 +37,7 @@ body {
 
 .incorrect {
   color: red;
-  border-bottom: 1px solid red;
+  border-color: red;
 }
 
 span {
@@ -58,32 +58,32 @@ span {
   z-index: 1;
 }
 
-.modal {
+.prompt {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
-  border-radius: 4px;
+  border-radius: 8px;
   background-color: white;
   padding: 3rem 2rem;
 }
 
-h2 {
+.accuracy {
   margin: 0;
 }
 
 h3 {
-  margin-top: 0;
-  margin-bottom: 3rem;
+  margin-top: 1.5rem;
+  margin-bottom: 2rem;
 }
 
 .reset {
   font-size: 1.5rem;
   color: white;
-  background-color: blue;
+  background-color: green;
   border: none;
-  border-radius: 4px;
+  border-radius: 8px;
   box-shadow: 0 2px 4px gray;
   padding: 0.5rem 1.5rem;
 }
